Revert Dockerfile